# ElectroPhy-EDL

./: .gitignore  .gitmodules  README.md
electrophy_studio/backend/: block_registry.json  main.py  serial_manager.py
electrophy_studio/frontend/: package-lock.json  package.json  vite.config.js
electrophy_studio/frontend/src/: App.jsx  index.css
electrophy_studio/frontend/src/components/builder/: CustomNodes.jsx  ExperimentBuilder.jsx  Sidebar.jsx  Toolbar.jsx
electrophy_studio/frontend/src/components/dashboard/: Dashboard.jsx
electrophy_studio/frontend/src/components/experiments/: SHMPendulum.jsx
electrophy_studio/frontend/src/components/telemetry/: LiveGraph.jsx
pico_code/: CMakeLists.txt  main.c  test_sensors.c  test_sensors.cpp  test_tof.c  vl53l0x.c  vl53l0x.h
pico_code/hw_debug/: debug_main.c  mic_usb_debug.c  uart_rx.pio  uart_tx.pio
